gitops/applications/base/monitoring-post-config/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-ui
  namespace: ${ARGOCD_ENV_monitoring_namespace}
spec:
  gateways:
    - ${ARGOCD_ENV_grafana_istio_gateway_namespace}/${ARGOCD_ENV_grafana_istio_wildcard_gateway_name}
  hosts:
    - "grafana.${ARGOCD_ENV_grafana_dns_subdomain}"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana-service
            port:
              number: 3000

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mimir-gateway
  namespace: ${ARGOCD_ENV_monitoring_namespace}
spec:
  gateways:
    - ${ARGOCD_ENV_mimir_istio_gateway_namespace}/${ARGOCD_ENV_mimir_istio_wildcard_gateway_name}
  hosts:
    - "mimir.${ARGOCD_ENV_mimir_dns_subdomain}"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: central-monitoring-grafana-mimir-gateway
            port:
              number: 80

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: loki-gateway
  namespace: ${ARGOCD_ENV_monitoring_namespace}
spec:
  gateways:
    - ${ARGOCD_ENV_mimir_istio_gateway_namespace}/${ARGOCD_ENV_mimir_istio_wildcard_gateway_name} # TODO: use loki subdomain
  hosts:
    - "loki.${ARGOCD_ENV_grafana_dns_subdomain}"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: control-center-loki-grafana-loki-gateway
            port:
              number: 80
